// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input/<ino-range> Discrete smoke-test 1`] = `
<div id="root-inner">
  <div class="story-range">
    <ino-range class="customizable-range ino-range--color-scheme-undefined hydrated"
               disabled="false"
               min="0"
               max="100"
               name
               discrete="true"
               markers="false"
               value="50"
               step="1"
               ranged="false"
               value-start="30"
               value-end="70"
               color-scheme="undefined"
    >
      <div class="mdc-slider mdc-slider--discrete">
        <input class="mdc-slider__input"
               type="range"
               min="0"
               max="100"
               step="1"
               name
               aria-label
               value="70"
        >
        <div class="mdc-slider__track">
          <div class="mdc-slider__track--inactive">
          </div>
          <div class="mdc-slider__track--active">
            <div class="mdc-slider__track--active_fill"
                 style="transform: scaleX(0.7);"
            >
            </div>
          </div>
        </div>
        <div class="mdc-slider__thumb mdc-ripple-upgraded--unbounded mdc-ripple-upgraded"
             style="--mdc-ripple-fg-size:28px; --mdc-ripple-fg-scale:1.71429; --mdc-ripple-left:10px; --mdc-ripple-top:10px; transform: translateX(840px);"
        >
          <div class="mdc-slider__value-indicator-container"
               aria-hidden
          >
            <div class="mdc-slider__value-indicator">
              <span class="mdc-slider__value-indicator-text">
                70
              </span>
            </div>
          </div>
          <div class="mdc-slider__thumb-knob">
          </div>
        </div>
      </div>
    </ino-range>
  </div>
</div>
`;

exports[`Input/<ino-range> Markers smoke-test 1`] = `
<div id="root-inner">
  <div class="story-range">
    <ino-range class="customizable-range ino-range--color-scheme-undefined hydrated"
               disabled="false"
               min="0"
               max="100"
               name
               discrete="true"
               markers="true"
               value="50"
               step="1"
               ranged="false"
               value-start="30"
               value-end="70"
               color-scheme="undefined"
    >
      <div class="mdc-slider mdc-slider--discrete mdc-slider--tick-marks">
        <input class="mdc-slider__input"
               type="range"
               min="0"
               max="100"
               step="1"
               name
               aria-label
               value="70"
        >
        <div class="mdc-slider__track">
          <div class="mdc-slider__track--inactive">
          </div>
          <div class="mdc-slider__track--active">
            <div class="mdc-slider__track--active_fill"
                 style="transform: scaleX(0.7); transition: all 0s ease 0s;"
            >
            </div>
          </div>
          <div class="mdc-slider__tick-marks">
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--active">
            </div>
            <div class="mdc-slider__tick-mark--inactive">
            </div>
            <div class="mdc-slider__tick-mark--inactive">
            </div>
            <div class="mdc-slider__tick-mark--inactive">
            </div>
            <div class="mdc-slider__tick-mark--inactive">
            </div>
            <div class="mdc-slider__tick-mark--inactive">
            </div>
            <div class="mdc-slider__tick-mark--inactive">
            </div>
            <div class="mdc-slider__tick-mark--inactive">
            </div>
            <div class="mdc-slider__tick-mark--inactive">
            </div>
            <div class="mdc-slider__tick-mark--inactive">
            </div>
            <div class="mdc-slider__tick-mark--inactive">
            </div>
            <div class="mdc-slider__tick-mark--inactive">
            </div>
            <div class="mdc-slider__tick-mark--inactive">
            </div>
            <div class="mdc-slider__tick-mark--inactive">
            </div>
            <div class="mdc-slider__tick-mark--inactive">
            </div>
            <div class="mdc-slider__tick-mark--inactive">
            </div>
            <div class="mdc-slider__tick-mark--inactive">
            </div>
            <div class="mdc-slider__tick-mark--inactive">
            </div>
            <div class="mdc-slider__tick-mark--inactive">
            </div>
            <div class="mdc-slider__tick-mark--inactive">
            </div>
            <div class="mdc-slider__tick-mark--inactive">
            </div>
            <div class="mdc-slider__tick-mark--inactive">
            </div>
            <div class="mdc-slider__tick-mark--inactive">
            </div>
            <div class="mdc-slider__tick-mark--inactive">
            </div>
            <div class="mdc-slider__tick-mark--inactive">
            </div>
            <div class="mdc-slider__tick-mark--inactive">
            </div>
            <div class="mdc-slider__tick-mark--inactive">
            </div>
            <div class="mdc-slider__tick-mark--inactive">
            </div>
            <div class="mdc-slider__tick-mark--inactive">
            </div>
            <div class="mdc-slider__tick-mark--inactive">
            </div>
            <div class="mdc-slider__tick-mark--inactive">
            </div>
          </div>
        </div>
        <div class="mdc-slider__thumb mdc-ripple-upgraded--unbounded mdc-ripple-upgraded"
             style="--mdc-ripple-fg-size:28px; --mdc-ripple-fg-scale:1.71429; --mdc-ripple-left:10px; --mdc-ripple-top:10px; transform: translateX(840px); transition: all 0s ease 0s;"
        >
          <div class="mdc-slider__value-indicator-container"
               aria-hidden
          >
            <div class="mdc-slider__value-indicator">
              <span class="mdc-slider__value-indicator-text">
                70
              </span>
            </div>
          </div>
          <div class="mdc-slider__thumb-knob">
          </div>
        </div>
      </div>
    </ino-range>
  </div>
</div>
`;

exports[`Input/<ino-range> Playground smoke-test 1`] = `
<div id="root-inner">
  <div class="story-range">
    <ino-range class="customizable-range"
               disabled="false"
               min="0"
               max="100"
               name
               discrete="false"
               markers="false"
               value="50"
               step="1"
               ranged="false"
               value-start="30"
               value-end="70"
               color-scheme="undefined"
    >
    </ino-range>
  </div>
</div>
`;

exports[`Input/<ino-range> Ranged smoke-test 1`] = `
<div id="root-inner">
  <div class="story-range">
    <ino-range class="customizable-range ino-range--color-scheme-undefined hydrated"
               disabled="false"
               min="0"
               max="100"
               name
               discrete="true"
               markers="false"
               value="50"
               step="1"
               ranged="true"
               value-start="30"
               value-end="70"
               color-scheme="undefined"
    >
      <div class="mdc-slider mdc-slider--discrete mdc-slider--range">
        <input class="mdc-slider__input"
               type="range"
               min="0"
               max="70"
               value="30"
        >
        <input class="mdc-slider__input"
               type="range"
               min="30"
               max="100"
               step="1"
               name
               aria-label
               value="70"
        >
        <div class="mdc-slider__track">
          <div class="mdc-slider__track--inactive">
          </div>
          <div class="mdc-slider__track--active">
            <div class="mdc-slider__track--active_fill"
                 style="transform-origin: left center; right: unset; left: 360px; transform: scaleX(0.4); transition: all 0s ease 0s;"
            >
            </div>
          </div>
        </div>
        <div class="mdc-slider__thumb mdc-ripple-upgraded--unbounded mdc-ripple-upgraded"
             style="--mdc-ripple-fg-size:28px; --mdc-ripple-fg-scale:1.71429; --mdc-ripple-left:10px; --mdc-ripple-top:10px; transform: translateX(360px); transition: all 0s ease 0s;"
        >
          <div class="mdc-slider__value-indicator-container"
               aria-hidden
          >
            <div class="mdc-slider__value-indicator">
              <span class="mdc-slider__value-indicator-text">
                30
              </span>
            </div>
          </div>
          <div class="mdc-slider__thumb-knob">
          </div>
        </div>
        <div class="mdc-slider__thumb mdc-ripple-upgraded--unbounded mdc-ripple-upgraded"
             style="--mdc-ripple-fg-size:28px; --mdc-ripple-fg-scale:1.71429; --mdc-ripple-left:10px; --mdc-ripple-top:10px; transform: translateX(840px); transition: all 0s ease 0s;"
        >
          <div class="mdc-slider__value-indicator-container"
               aria-hidden
          >
            <div class="mdc-slider__value-indicator">
              <span class="mdc-slider__value-indicator-text">
                70
              </span>
            </div>
          </div>
          <div class="mdc-slider__thumb-knob">
          </div>
        </div>
      </div>
    </ino-range>
  </div>
</div>
`;
